cilium-cli/connectivity/manifests/client-egress-to-echo-service-account-deny.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  namespace: cilium-test
  name: client-egress-to-echo-service-account-deny
spec:
  endpointSelector:
    matchLabels:
      io.cilium.k8s.policy.serviceaccount: client
  egressDeny:
  - toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
    toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: cilium-test
        kind: echo
